--- a/MyCinema-server/nbproject/project.properties
+++ b/MyCinema-server/nbproject/project.properties
@@ -40,7 +40,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-20180813.jar}:\
-    ${file.reference.json-20180813.jar-1}
+    ${file.reference.json-20180813.jar-1}:\
+    ${libs.restapi.classpath}:\
+    ${libs.restlib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -72,6 +74,7 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
